syntax = "proto3";

option go_package = "./auth";

//Important to be always same in every environment
package auth;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  string status = 1;
  string error = 2;
}

service AuthorizationService {
  rpc RegisterUser(RegisterRequest) returns(RegisterResponse) {}
  rpc LoginUser(LoginRequest) returns(LoginResponse) {}
}